# FOEM

./: .gitignore  ARCHITECTURE_AND_SECURITY.md  Agent.md  Cargo.toml  LICENSE  README.md  SECURITY.md  TRANSLATION_GUIDE.md  gms_repair_template.py  patch_app3.py  patch_app_bootloader.py  patch_app_tools.py  patch_bootloader.py  patch_bootloader2.py  patch_bootloader_final.py  patch_tools.py  pr_body.txt  pr_description.md  requirements.txt
.github/workflows/: build.yml  release.yml
benches/: network_bench.rs
locales/: en.json
src/: __init__.py  adaptive_engine.rs  app.rs  diagnostics.py  diagnostics.rs  exec.rs  gms_repair.py  gms_repair.rs  license_text.rs  main.py  main.rs  theme.rs  update_manager.py  update_manager.rs
src/features/: ai_assistant.rs  bootloader.rs  flash.rs  hardware_test.rs  mod.rs  network.rs  repair.rs  tools.rs
src/ui/: __init__.py  app.py
